fix validation errors

--- a/meta/17-9-1.md
+++ b/meta/17-9-1.md
@@ -1,8 +1,7 @@
 ---
 data_non_statistical: false
 goal_meta_link: 'https://unstats.un.org/sdgs/metadata/files/Metadata-17-09-01.pdf '
-goal_meta_link_text: United Nations Sustainable Development Goals Metadata (PDF 209
-  KB)
+goal_meta_link_text: United Nations Sustainable Development Goals Metadata (PDF 209 KB)
 graph_type: line
 indicator: 17.9.1
 indicator_definition: Total Overseas Development Aid (ODA) and Other Official Flows
@@ -25,4 +24,5 @@ graph_title: Dollar value of financial and technical assistance (including throu
 un_custodian_agency: Organisation for Economic Co-operation and Development (OECD)
   United Nations Environment (UNEP) World Bank (WB)
 un_designated_tier: '1'
+comments_limitations: ""
 ---
