--- a/meta/3-8-1.md
+++ b/meta/3-8-1.md
@@ -24,4 +24,5 @@ graph_title: Coverage of essential health services (defined as the average cover
   and access, among the general and the most disadvantaged population)
 un_custodian_agency: WHO
 un_designated_tier: '3'
+comments_limitations: ""
 ---
