--- a/meta/2-2-2.md
+++ b/meta/2-2-2.md
@@ -25,5 +25,5 @@ source_active_4: false
 source_active_5: false
 source_active_6: false
 indicator_sort_order: 02-02-02
-comments_limitations: 
+comments_limitations: ""
 ---
