--- a/meta/5-3-1.md
+++ b/meta/5-3-1.md
@@ -22,5 +22,5 @@ source_active_4: false
 source_active_5: false
 source_active_6: false
 indicator_sort_order: 05-03-01
-comments_limitations: 
+comments_limitations: ""
 ---
