--- a/meta/8-7-1.md
+++ b/meta/8-7-1.md
@@ -25,5 +25,5 @@ source_active_4: false
 source_active_5: false
 source_active_6: false
 indicator_sort_order: 08-07-01
-comments_limitations: 
+comments_limitations: ""
 ---
